<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSomar"
        android:layout_width="363dp"
        android:layout_height="47dp"
        android:text="@string/somar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="271dp"

        />

    <Button
        android:id="@+id/buttonSubtrair"
        android:layout_width="363dp"
        android:layout_height="47dp"
        android:text="@string/subtrair"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="331dp" />

    <Button
        android:id="@+id/buttonMultiplicar"
        android:layout_width="363dp"
        android:layout_height="47dp"
        android:text="@string/multiplicar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/buttonDividir"
        android:layout_width="363dp"
        android:layout_height="47dp"
        android:text="@string/dividir"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/textViewTituloResultado"
        android:layout_width="96dp"
        android:layout_height="30dp"
        android:text="@string/resultados"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="542dp" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="268dp"
        android:layout_height="30dp"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="542dp" />

    <EditText
        android:id="@+id/editTextValor2"
        android:layout_width="365dp"
        android:layout_height="38dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number"
        android:numeric="decimal"
        android:text="0"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="220dp" />

    <EditText
        android:id="@+id/editTextValor1"
        android:layout_width="365dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:numeric="decimal"
        android:text="0"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="365dp"
        android:layout_height="31dp"
        android:layout_weight="1"
        android:text="@string/valorDois"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="175dp" />

    <TextView
        android:id="@+id/textViewTituloValor1"
        android:layout_width="290dp"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/valorUm"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="172dp"
        android:layout_height="33dp"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textColor="#0654EF"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>